plugins/cairo-lang-macro/tests/args/args_01.stderr
error: only `parent` argument is supported
 --> tests/args/args_01.rs:3:24
  |
3 | #[attribute_macro(path = "some::path")]
  |                        ^

warning: unused imports: `ProcMacroResult` and `TokenStream`
 --> tests/args/args_01.rs:1:41
  |
1 | use cairo_lang_macro::{attribute_macro, ProcMacroResult, TokenStream};
  |                                         ^^^^^^^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
